fixed video on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3171,5 +3171,8 @@ input, select, textarea {
 	#bkgVid {
 		position: absolute;
     	top: 0;
+		left: 0;
 		width: 100vw;
+		height: 100vh;
+		object-fit: fill;
 	}
